[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/AI/player_detection_zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/base_npc/harpy_boss/harpy_boss.gd" type="Script" id=2]
[ext_resource path="res://src/characters/base_npc/harpy_boss/harpy_boss_control.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/harpy_boss/harpy_boss_sheet.png" type="Texture" id=4]
[ext_resource path="res://src/characters/base_npc/harpy_boss/attack/harpy_boss_projectile_attack.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/characters/base_npc/harpy_boss/phase_attacks/phase_2_attack_2/phase_2_attack_2_control.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/characters/base_npc/harpy_boss/harpy_boss_stats.gd" type="Script" id=7]
[ext_resource path="res://src/characters/base_npc/harpy_boss/phase_attacks/phase_1_attack_1/phase_1_attack_1_control.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/characters/base_npc/harpy_boss/phase_attacks/phase_1_attack_2/phase_1_attack_2_control.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/characters/base_npc/harpy_boss/phase_attacks/phase_2_attack_1/phase_2_attack_1_control.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/characters/base_npc/harpy_boss/phase_attacks/phase_3_attack_1/phase_3_attack_1_control.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/characters/base_npc/harpy_boss/phase_attacks/phase_3_attack_2/phase_3_attack_2.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/AI/wander_controller.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/etc/status_bars/npc_health/npc_health_bar.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/characters/base_hurtbox.gd" type="Script" id=15]
[ext_resource path="res://src/AI/attack_range.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/characters/hands.gd" type="Script" id=17]
[ext_resource path="res://assets/textures/harpy/shadow.png" type="Texture" id=18]
[ext_resource path="res://src/characters/crosshair.gd" type="Script" id=19]

[sub_resource type="Animation" id=1]
resource_name = "idle_back"
length = 1.02
loop = true
step = 0.085
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 26, 25, 24, 23, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.51 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_front"
length = 1.02
loop = true
step = 0.085
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 5, 4, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.51 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left_down "
length = 1.02
loop = true
step = 0.085
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13, 12, 11, 10, 9, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.51 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_left_up"
length = 1.02
loop = true
step = 0.085
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 19, 18, 17, 16, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.51 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_right_down"
length = 1.02
loop = true
step = 0.085
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13, 12, 11, 10, 9, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.51 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_right_up"
length = 1.02
loop = true
step = 0.085
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 19, 18, 17, 16, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.51 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle_left_down "

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle_left_down "

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle_front"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_right_up"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_back"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_left_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( -0.6, 0.7 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0.6, 0.7 )
blend_point_4/node = SubResource( 11 )
blend_point_4/pos = Vector2( 1, 0 )
blend_point_5/node = SubResource( 12 )
blend_point_5/pos = Vector2( 0.6, -0.7 )
blend_point_6/node = SubResource( 13 )
blend_point_6/pos = Vector2( 0, -1.1 )
blend_point_7/node = SubResource( 14 )
blend_point_7/pos = Vector2( -0.6, -0.7 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=16]
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 223, 123 )
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="CapsuleShape2D" id=18]
radius = 4.07981
height = 17.0234

[sub_resource type="CircleShape2D" id=19]
radius = 100.537

[sub_resource type="CircleShape2D" id=20]
radius = 159.482

[sub_resource type="CircleShape2D" id=21]
radius = 16.6692

[node name="harpy_boss" type="KinematicBody2D"]
collision_layer = 2147483656
collision_mask = 2147483658
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_back = SubResource( 1 )
anims/idle_front = SubResource( 2 )
"anims/idle_left_down " = SubResource( 3 )
anims/idle_left_up = SubResource( 4 )
anims/idle_right_down = SubResource( 5 )
anims/idle_right_up = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/idle/blend_position = Vector2( 0, 0 )

[node name="AttackPlayer" type="AnimationPlayer" parent="."]

[node name="pivot" type="Position2D" parent="."]

[node name="shadow" type="Sprite" parent="pivot"]
position = Vector2( 0, 24 )
texture = ExtResource( 18 )

[node name="sprite" type="Sprite" parent="pivot"]
position = Vector2( 0, -0.275433 )
texture = ExtResource( 4 )
hframes = 28
frame = 12

[node name="hands" type="Sprite" parent="pivot"]
script = ExtResource( 17 )

[node name="attack" parent="." instance=ExtResource( 5 )]

[node name="collision_box" type="CollisionShape2D" parent="."]
position = Vector2( -0.486946, 15.1791 )
rotation = 1.5708
shape = SubResource( 18 )

[node name="control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="phase_cd" type="Timer" parent="control"]
wait_time = 15.0
one_shot = true

[node name="phase_1_attack_1" parent="control" instance=ExtResource( 8 )]

[node name="phase_1_attack_2" parent="control" instance=ExtResource( 9 )]

[node name="phase_2_attack_1" parent="control" instance=ExtResource( 10 )]

[node name="phase_2_attack_2" parent="control" instance=ExtResource( 6 )]

[node name="phase_3_attack_1" parent="control" instance=ExtResource( 11 )]

[node name="phase_3_attack_2" parent="control" instance=ExtResource( 12 )]

[node name="ray_hitscan" parent="control/phase_3_attack_2" index="3"]
visible = false

[node name="attack_range" parent="control" instance=ExtResource( 16 )]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" parent="control/attack_range" index="0"]
shape = SubResource( 19 )

[node name="player_detection_zone" parent="control" instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="control/player_detection_zone" index="0"]
shape = SubResource( 20 )

[node name="wander_controller" parent="control" instance=ExtResource( 13 )]

[node name="stats" type="Node" parent="."]
script = ExtResource( 7 )

[node name="StatusBar" type="Node2D" parent="."]
position = Vector2( 0, 30 )
z_index = 3

[node name="statusBar" parent="StatusBar" instance=ExtResource( 14 )]
margin_left = -58.8658
margin_top = -80.2716
margin_right = -58.8658
margin_bottom = -80.2716

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 21 )

[node name="crosshair" type="Position2D" parent="."]
z_index = 999
z_as_relative = false
script = ExtResource( 19 )

[node name="sprite" type="Sprite" parent="crosshair"]
[connection signal="timeout" from="control/phase_cd" to="control" method="_on_phase_cd_timeout"]
[connection signal="damage_from_behind" from="stats" to="control/player_detection_zone" method="_on_stats_damage_from_behind"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]

[editable path="control/phase_1_attack_1"]

[editable path="control/phase_1_attack_2"]

[editable path="control/phase_2_attack_1"]

[editable path="control/phase_3_attack_1"]

[editable path="control/phase_3_attack_2"]

[editable path="control/attack_range"]

[editable path="control/player_detection_zone"]

[editable path="control/wander_controller"]
